Adjust menu size to fix wrap

--- a/app/assets/stylesheets/application/accounts_menu.css.scss
+++ b/app/assets/stylesheets/application/accounts_menu.css.scss
@@ -2,7 +2,7 @@ ul.accounts-menu {
   padding: 0;
   list-style-type: none;
   margin: 20px auto 0;
-  width: 504px;
+  width: 509px;
 
   li {
     padding: 5px 10px;
